--- a/project.config
+++ b/project.config
@@ -1,23 +1,13 @@
 [access]
-	inheritFrom = All-Projects
-[submit]
+	inheritFrom = GerritForge/gerrit-enterprise-projects
 [project]
 	description = Gerrit module for using the ChronicleMap as cache persistence layer
 [access "refs/*"]
-	owner = group user/Luca Milanesio (lucamilanesio)
-[access "refs/for/refs/*"]
-	label-Code-Review = -2..+2 group user/Luca Milanesio (lucamilanesio)
-	label-Verified = -1..+1 group user/Luca Milanesio (lucamilanesio)
-	push = group user/Luca Milanesio (lucamilanesio)
-	read = group user/Luca Milanesio (lucamilanesio)
-	rebase = group user/Luca Milanesio (lucamilanesio)
-	removeReviewer = group user/Luca Milanesio (lucamilanesio)
-	submit = group user/Luca Milanesio (lucamilanesio)
-[access "refs/heads/*"]
-	create = group user/Luca Milanesio (lucamilanesio)
-	push = +force group user/Luca Milanesio (lucamilanesio)
-	pushMerge = group user/Luca Milanesio (lucamilanesio)
-	read = group user/Luca Milanesio (lucamilanesio)
+	owner = group GerritForge-cache-chroniclemap
+	label-Code-Review = -2..+2 group GerritForge-cache-chroniclemap
+	label-Verified = -1..+1 group GerritForge-cache-chroniclemap
+	rebase = group GerritForge-cache-chroniclemap
+	submit = group GerritForge-cache-chroniclemap
+	removeReviewer = group GerritForge-cache-chroniclemap
 [access "refs/tags/*"]
-	push = group user/Luca Milanesio (lucamilanesio)
 	push = +force group user/Luca Milanesio (lucamilanesio)
